--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
 	"editor.detectIndentation": false,
 
 	"prettier.tabWidth": 3,
-	"prettier.useTabs": true
+   "prettier.useTabs": true,
+   "editor.fontSize": 12
 }
